cmake: Document '--preset <preset>' form of the argument

This form already works.  Document it and add tests.

Issue: #21855